# logging-python

./: README.md
logging-client/: Makefile  pyproject.toml
logging-client/logging_client/: run_debug.py  run_stuff.py
logging-client/tests/: test_logging_client.py
logging-server/: pyproject.toml
logging-server/logging_server/: emit_logs.py
